src/snapshots/afrotd__parser__tests__interpretation_7.3.2_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 1
text: "Quarterback A10, der sich innerhalb der Tackle Box befindet und\nversucht Raumverlust zu verhindern, wirft absichtlich einen Verzweiflungspass, der in einer Zone, in der kein berechtigter Team A-Spieler\neine geeignete Möglichkeit zum Fangen des Vorwärtspasses hat, unvollständig wird."
ruling: "Illegaler Vorwärtspass wegen absichtlichen\nWegwerfens eines Vorwärtspasses. Strafe – Downverlust am Spot of\nFoul. Die Game Clock startet mit dem Snap (Regel 3.3.2.d.4), sofern\nnicht Regel 3.4.4 zutrifft."
