src/snapshots/afrotd__parser__tests__interpretation_7.3.2_11.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 11
text: "2. und 10 von der A-40. A11 erhält den Longsnap und übergibt den Ball an Back A44. A44 macht ein paar Schritte in Richtung der\nScrimmage Line und wirft dann einen Rückpass auf A11, der sich weiterhin in der Tackle Box befindet. Um einigen Tacklern auszuweichen,\nverlässt A11 die Tackle Box. Da er nicht in der Lage ist, einen freien Receiver zu finden, wirft er von der A-35 den Ball in eine Zone, in der sich\nkein berechtigter Receiver befindet. Der Ball landet jenseits der neutralen Zone im Aus."
ruling: "Illegaler Vorwärtspass. Downverlust an\nder A-35, 3. und 15. A11 verliert das Recht, den Ball legal wegzuwerfen, da er den Ballbesitz an einen anderen Spieler übertrug, bevor er\nden Vorwärtspass warf."
