src/snapshots/afrotd__parser__tests__interpretation_7.3.2_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 2
text: "Nach dem Zwei-Minuten-Timeout in der vierten Spielperiode findet A10 keinen freien Receiver. Um Zeit einzusparen, wirft er einen\nunvollständigen Vorwärtspass in eine Zone, in der sich kein berechtigter Team A-Spieler befindet."
ruling: "Illegaler Vorwärtspass wegen\nabsichtlichen Wegwerfens eines Vorwärtspasses. Strafe – Downverlust\nam Punkt des Fouls. Da sich dieses Foul nach dem Zwei-MinutenTimeout ereignet, fällt es unter die 10-Sekunden-Abzugs-Regel (Regel\n3.4.4)."
