src/snapshots/afrotd__parser__tests__interpretation_7.3.2_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 3
text: "Beim dritten Down, nach dem Zwei-Minuten-Timeout, mufft A4,\nder vorgesehene Holder für ein Fieldgoal, den Snap und er oder der\nvorgesehene Kicker A3 recovert den Ball und wirft ihn sofort zu Boden."
ruling: "Illegaler Vorwärtspass wegen absichtlichen Wegwerfens eines Vorwärtspasses, um Zeit einzusparen. Strafe – Downverlust am\nPunkt des Fouls. Da sich dieses Foul nach dem Zwei-Minuten-Timeout\nereignet, fällt es unter die 10-Sekunden-Abzugs-Regel (Regel 3.4.4)."
