src/snapshots/afrotd__parser__tests__interpretation_7.3.2_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 4
text: "Nach dem Zwei-Minuten-Timeout wird der Ball über den Kopf\nvon Quarterback A12, der in einer Shotgun-Formation steht, gesnappt. A12 recovert den Ball und wirft ihn sofort vorwärts zu Boden."
ruling: "Illegaler Vorwärtspass wegen absichtlichen Wegwerfens eines\nVorwärtspasses, um Zeit einzusparen. Strafe – Downverlust am Punkt\ndes Fouls. Da sich dieses Foul nach dem Zwei-Minuten-Timeout ereignet, fällt es unter die 10-Sekunden-Abzugs-Regel (Regel 3.4.4)."
