src/snapshots/afrotd__parser__tests__interpretation_7.3.2_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 2
index: 5
text: "Im dritten Down gegen Ende der ersten Halbzeit mufft A1 den\nSnap. A1 oder A4 fängt den gemufften Ball und wirft ihn sofort vorwärts\nauf den Boden."
ruling: Legales Spiel.
